--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@testing-library/react": "^13.4.0",
     "@types/react-router-dom": "^5.3.3",
     "cypress": "^10.11.0",
+    "fetch-mock": "^9.11.0",
     "jest": "^29.3.1",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
