--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
     "cypress": "^10.11.0",
     "fetch-mock": "^9.11.0",
     "jest": "^29.3.1",
-    "react-test-renderer": "^18.2.0",
+    "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4"
   }
 }
